--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Барбершоп «Бородинский» | Главная</title>
     <link rel="stylesheet" href="style/main.css">
     <link rel="stylesheet" href="style/normalize.css">
+    <link rel="stylesheet/less" href="stiles.less">
   </head>
   <body>
 
