--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Барбершоп «Бородинский» | Главная</title>
     <link rel="stylesheet" href="style/main.css">
     <link rel="stylesheet" href="style/normalize.css">
-    </script>
   </head>
   <body>
 
@@ -14,7 +13,7 @@
       <a href="#" class="page-header__logo">
         <img src="img/logotype-mobile.png" alt="Барбершоп «Бородинский»" class="page-header__logo-image" width="226" height="30">
       </a>
-      <nav class="main-nav main-nav--closed">
+      <nav class="main-nav main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
@@ -236,5 +235,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="js/script.js"></script>
   </body>
 </html>
