--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Барбершоп «Бородинский» | Главная</title>
     <link rel="stylesheet" href="style/main.css">
     <link rel="stylesheet" href="style/normalize.css">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
 
@@ -55,8 +56,8 @@
         <header class="stats__header">
           <h2 class="visually-hidden">Статистика барбершопа</h2>
           <b class="stats__slogan">Стрижка у нас это выгодно!</b>
-          <p class="intro">Мужская стрижка требует точного подхода. Обратимся к статистике:</p>
-          <small class="stats__legend stats-legend--top">
+          <p class="stats__intro">Мужская стрижка требует точного подхода. Обратимся к статистике:</p>
+          <small class="stats__legend stats__legend--top">
             <sup>*</sup> — приведенные данные ложь
           </small>
         </header>
