--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="advantages__wrapper slider">
         <h2 class="visually-hidden"></h2>
           <ul class="advantages__list slider__list">
-            <li class="advantages__item advantages__item--fast slider__item">
+            <li class="advantages__item advantages__item--fast slider__item showing">
               <h3 class="advantages__title">БЫСТРО</h3>
               <p class="advantages__discription">Мы делаем свою работу быстро! Два часа пролетят незаметно и Вы — счастливый обладатель стильной стрижки-минутки.</p>
             </li>
